--- a/index.html
+++ b/index.html
@@ -116,15 +116,15 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12 text-center">
-                <h3>We are getting hitched</h3>
-                <p>The dates are 27<sup>th</sup> & 28<sup>th</sup> of November '17 and we would like you to be a part of
-                    it.</p>
+                <h3>Ci sposiamo!</h3>
+                <p>Ci sposiamo il 6 Novembre e vorremmo che tu partecipassi.</p>
                 <div class="share-bar"></div>
             </div>
         </div>
     </div>
 </section>
 
+<!--
 <section id="intro">
     <div class="container">
         <div class="row">
@@ -152,6 +152,7 @@
         </div>
     </div>
 </section>
+-->
 
 <section class="events section-padding" id="events">
     <div class="container">
