--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             <div class="col-md-12 text-center">
                 <h3>Ci sposiamo!</h3>
                 <p>Ci sposiamo il 6 Settembre e vorremmo che tu partecipassi.</p>
-                <div class="share-bar"></div>
+		<!--<div class="share-bar"></div>-->
             </div>
         </div>
     </div>
@@ -199,18 +199,7 @@
                 </div>
             </div>
         </div>
-        <div class="row section-padding">
-            <div class="col-md-4 col-md-offset-4 text-center">
-                <a class="btn btn-accent btn-small" data-toggle="modal" data-target="#dc-modal">
-                    <i class="fa fa-barcode"></i>&nbsp;&nbsp;Dress code
-                </a>
-            </div>
-        </div>
-        <!--<div class="row">
-            <div class="col-xs-12 section-border section-padding">
-            </div>
-        </div>-->
-    </div>
+      </div>
 </section>
 
 <section id="instagram" class="section-padding">
