--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
     <link rel="manifest" href="manifest.json">
-    <link rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5">
 
     <script>
         // load css files from CDN if local node_modules fail
@@ -75,7 +74,7 @@
                         <ul class="primary-nav">
                             <li><a href="#events">Events</a></li>
                             <li><a href="#instagram">Instagram</a></li>
-                            <li><a href="#eng-pics">Engagement</a></li>
+                            <li><a href="#eng-pics">Foto</a></li>
                             <li class="hidden-sm hidden-xs"><a href="#video-bg">Glimpse of the city</a></li>
                         </ul>
                         <ul class="member-actions">
@@ -223,7 +222,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-12 text-center">
-                <h3 class="header">Engagement Pics</h3>
+                <h3 class="header">Questi siamo noi!</h3>
             </div>
         </div>
         <div class="row">
