Added field to RSVP

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                 <div class="wp3">
                     <p><strong>Sabato 6 Settembre 10:30</strong></p>
                     <p>
-		    Il sacramento del Matrimonio sat&egrave; amministrato da Don Guido dutto nella Parrocchia di Maria Ausiliatrice a Torino.
+		    Il sacramento del Matrimonio sat&egrave; amministrato da Don Guido Dutto nella Parrocchia di Maria Ausiliatrice a Torino.
 		    </p>
                 </div>
             </div>
@@ -384,23 +384,6 @@
                         </div>
                         <div class="col-md-6 col-sm-6">
                             <div class="form-input-group">
-                                <i class="fa fa-user"></i><input name="name" class=""
-                                                                 placeholder="Nome"
-                                                                 required>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-6 col-sm-6">
-                            <div class="form-input-group">
-                                <i class="fa fa-users"></i><input type="number" name="extras" class="" min="0"
-                                                                  max="4"
-                                                                  placeholder="Accompagnatori"
-                                                                  required>
-                            </div>
-                        </div>
-                        <div class="col-md-6 col-sm-6">
-                            <div class="form-input-group">
                                 <i class="fa fa-key"></i><input name="invite_code" id="invite_code"
                                                                 class="" min="0"
                                                                 placeholder="Codice d'invito"
@@ -408,6 +391,41 @@
                             </div>
                         </div>
                     </div>
+
+                    <div class="row">
+                        <div class="col-md-6 col-sm-6">
+                            <div class="form-input-group">
+                                <i class="fa fa-user"></i><input name="name" class=""
+                                                                 placeholder="Nome"
+                                                                 required>
+                            </div>
+                        </div>
+                        <div class="col-md-6 col-sm-6">
+                            <div class="form-input-group">
+                                <i class="fa fa-user"></i><input name="consorte" class=""
+                                                                 placeholder="Consorte o equivalente"
+                                                                 >
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-md-6 col-sm-6">
+                            <div class="form-input-group">
+                                <i class="fa fa-user"></i><input name="figlio1" class=""
+                                                                 placeholder="Figlio 1"
+                                                                 >
+                            </div>
+                        </div>
+                        <div class="col-md-6 col-sm-6">
+                            <div class="form-input-group">
+                                <i class="fa fa-user"></i><input name="figlio2" class=""
+                                                                 placeholder="Figlio 2"
+                                                                 >
+                            </div>
+                        </div>
+                    </div>
+
                     <div class="row">
                         <div class="col-md-12" id="alert-wrapper"></div>
                     </div>
